--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Sign_Up_Next"></activity>
+        <activity
+            android:name=".deals"
+            android:label="@string/title_activity_deals"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Signup_Success" />
+        <activity android:name=".Sign_Up_Next" />
         <activity android:name=".Sign_In" />
         <activity android:name=".Sign_Up" />
         <activity
